--- a/pages/Certifications/Azure/Azure_Fundamentals_Notes.mdx
+++ b/pages/Certifications/Azure/Azure_Fundamentals_Notes.mdx
@@ -35,7 +35,7 @@ These notes are from the Deloitte/Microsoft training and covers material specifi
 		- High Availability
 			- Based on SLAs - www.azure.cn/en-us/support/sla/summary/
 		- Scalability
-			- Expand hardware performance, upping CPU, RAM, storage, et-, can add/remove resources, can add/remove servers
+			- Expand hardware performance, upping CPU, RAM, storage, etc., can add/remove resources, can add/remove servers
 			- Scale-out/Horizontal Scaling --  continue adding additional servers
 			- Scale-up/Vertical Scaling -- adding more resources to existing server
 		- Predictable
@@ -47,14 +47,14 @@ These notes are from the Deloitte/Microsoft training and covers material specifi
 			- How reliable are your services/servers, SLA - 24/7 service, what infrastructure azure provides you with making the resources reliabl- Reliability is in conjunction with SLAs
 		- Security
 		- Manageability
-			- Monitoring - Alerts, Performance metrics for resources on Azure, et-
+			- Monitoring - Alerts, Performance metrics for resources on Azure, etc.
 		- Agility means that you can deploy and configure cloud-based resources quickly as app requirements chang- 
 		- Scalability means that you can add RAM, CPU, or entire virtual machines to a configuration. 
 		- Elasticity means that you can configure cloud-based apps to take advantage of autoscaling, so apps always have the resources they nee- 
 		- High availability means that cloud-based apps can provide a continuous user experience with no apparent downtime, even when things go wron-
 
 	1. Management Groups - IT
-		- Subscriptions - DEV, TEST, UAT, PROD, et- 
+		- Subscriptions - DEV, TEST, UAT, PROD, etc. 
 			- Resource Groups -  A resource group is a container that holds all your resources
 				1) Resources - Website, API, SQL Database, Storage Account. 
 					a) A resource can only be used in one resource group, it can be moved to another resource group but will be removed from the one it was in initially
@@ -189,7 +189,7 @@ Azure compute is an on-demand computing service that provides computing resource
 			- Used for production, not for lower environments
 	3. Azure Storage Services
 		- Containers (aka Blob)
-			- Blobs store unstructured data like CSVs, or structured data like images, audio, video, et-
+			- Blobs store unstructured data like CSVs, or structured data like images, audio, video, etc.
 		- File Shares
 			- Can take all files sitting on your on premise file share and put it on Azure and can reference it the way you would if it was still on premise, such as --> P:
 			- Network drive on premises to Azure network drive
@@ -327,7 +327,7 @@ Azure compute is an on-demand computing service that provides computing resource
 			- Role assignments
 			- Policy assignments
 			- Azure resource manager templates
-				1) ARM templates = IaC, bitc-
+				1) ARM templates = IaC
 			- Resources groups
 		- Azure Policy helps to enforce organizational standards and to assess compliance at scal- Provides governance and resource consistency with regulatory compliance, security, cost, and management.
 			- Evaluates and identifies Azure resources that do not comply with your policies
@@ -338,7 +338,7 @@ Azure compute is an on-demand computing service that provides computing resource
 			- Delete Lock - Can read and update, cannot delete
 			- ReadOnly Lock - Can read, cannot update or delete
 		- Service Trust Portal
-			- Get whitepapers and audit reports, it's a library for getting best practices, et-
+			- Get whitepapers and audit reports, it's a library for getting best practices, etc.
 	3. Management and deployment tools
 		- Tools for interacting with Azure
 			- Azure portal
@@ -364,7 +364,6 @@ Azure compute is an on-demand computing service that provides computing resource
 			- Azure Advisor is a free tool that analyzes deployed Azure resources and makes recommendations based on… 
 			- Advisor score, let's you know how things are looking in your cloud environments, can track over time how this score changes or stays the same
 			- Can show you where you can save costs:
-			- 
 			- https://portal.azur-us/#view/Microsoft_Azure_Expert/AdvisorMenuBlade/~/overview
 			- Azure advisor analyzes deployed azure resources and makes recommendations based on best practices to optimize azure environments
 		- Azure Service Health
@@ -381,16 +380,13 @@ Azure compute is an on-demand computing service that provides computing resource
 			- Use to find information about planned maintenance for Azure services that are critical to your organization
 			- You can drill down to the affected services, regions, and details to show how an event will affect you and what you must do. Most of these events occur without any impact to you and will not be shown. In a rare case that a reboot is required, Service Health allows you to choose when to perform the maintenance to minimize the downtime
 	
-	
-		
-		
 ## Actual Exam Experience 
 	1. Taken early March 2023
     2. 38 Questions
 	2. 45 Minutes
 	3. Passed --> Got a 760, passing score was 700
-	4. Exam was more challenging than anticipate-
-		- Similarity to practice exam = ~35%
+	4. Exam was more challenging than anticipated
+		- Similarity to practice exam = ~55%
 		- Most challenging questions were scenario based, asking if a certain set of requirements was presented, what should be the appropriate course of action
 		- Some questions around how to use resources effectively
 		- Questions on monitoring were more technical than in practice exam
@@ -399,5 +395,3 @@ Azure compute is an on-demand computing service that provides computing resource
 				2) Application Insights
 	5. Some tricky questions, mostly around specific language, for example, if the term "resource" is used, identify resources in the answer.
 	6. Didn't review my answers, just submitted it.
-	7. I don't think I would have passed the exam on my first try if I wasn't regularly using Azure for the last ~2 years, some questions were just common sense based on use, others were tricky but the answer could be extrapolated based on us-
-
