--- a/pages/Misc/Markdown_Cheat_Sheet.mdx
+++ b/pages/Misc/Markdown_Cheat_Sheet.mdx
@@ -6,23 +6,31 @@ This Markdown cheat sheet provides a quick overview of all the Markdown syntax e
 
 These are the elements outlined in John Gruber’s original design document. All Markdown applications support these elements.
 
-### Heading
+### Heading  
+```### Heading```
 
 # H1
+```# H1```
 ## H2
+``` ## H2```
 ### H3
+```### H3```
 
 ### Bold
 
-**bold text**
+**bold text**  
+```**bold text**```
 
 ### Italic
 
-*italicized text*
+*italicized text*  
+```*italicized text*```
 
 ### Blockquote
 
-> blockquote
+> blockquote  
+
+```> blockquote```
 
 ### Ordered List
 
@@ -30,27 +38,43 @@ These are the elements outlined in John Gruber’s original design document. All
 2. Second item
 3. Third item
 
+```
+1. First item
+2. Second item
+3. Third item
+```
+
 ### Unordered List
 
 - First item
 - Second item
 - Third item
 
+```
+- First item
+- Second item
+- Third item
+```
+
 ### Code
 
-`code`
+`code`  
+``` `code` ```
 
 ### Horizontal Rule
 
----
+---  
+```---```
 
 ### Link
 
-[Markdown Guide](https://www.markdownguide.org)
+[Markdown Guide](https://www.markdownguide.org)  
+```[Markdown Guide](https://www.markdownguide.org)```
 
 ### Image
 
 ![alt text](https://www.markdownguide.org/assets/images/tux.png)
+```![alt text](https://www.markdownguide.org/assets/images/tux.png)```
 
 ## Extended Syntax
 
@@ -63,6 +87,13 @@ These elements extend the basic syntax by adding additional features. Not all Ma
 | Header | Title |
 | Paragraph | Text |
 
+```
+| Syntax | Description |
+| ----------- | ----------- |
+| Header | Title |
+| Paragraph | Text |
+```
+
 ### Fenced Code Block
 
 ```
@@ -73,9 +104,11 @@ These elements extend the basic syntax by adding additional features. Not all Ma
 }
 ```
 
+
 ### Footnote
 
-Here's a sentence with a footnote. [^1]
+Here's a sentence with a footnote. [^1]  
+```[^1]```
 
 [^1]: This is the footnote.
 
@@ -84,11 +117,16 @@ Here's a sentence with a footnote. [^1]
 ### Definition List
 
 term
-: definition
+: definition  
+```
+term
+: definition 
+```
 
 ### Strikethrough
 
 ~~The world is flat.~~
+```~~The world is flat.~~```
 
 ### Task List
 
@@ -96,20 +134,30 @@ term
 - [ ] Update the website
 - [ ] Contact the media
 
+```
+- [x] Write the press release
+- [ ] Update the website
+- [ ] Contact the media
+```
+
 ### Emoji
 
-That is so funny! :joy:
+That is so funny! :joy:  
+```:joy:```
 
 (See also [Copying and Pasting Emoji](https://www.markdownguide.org/extended-syntax/#copying-and-pasting-emoji))
 
 ### Highlight
 
-I need to highlight these ==very important words==.
+I need to highlight these ==very important words==.  
+```==very important words==```
 
 ### Subscript
 
-H~2~O
+H~2~O  
+```H~2~O```
 
 ### Superscript
 
-X^2^
+X^2^  
+```X^2^```
