--- a/pages/Certifications/Cloud_Resource_Comparision.mdx
+++ b/pages/Certifications/Cloud_Resource_Comparision.mdx
@@ -19,5 +19,5 @@
 | **Data Pipeline** |  | Azure DataFactory | Cloud Data Fusion |
 | **Managed Server Side Website Builder/Service** |	AWS Amplify |  | App Engine |
 | **Total Cost of Ownership Tool** |  |  |  |			
-| **Pricing Calculator** | Pricing Calculator |	Pricing Calculator | Pricing Calculator |
+| **Pricing Calculator** | [Pricing Calculator](https://calculator.aws/#/) |	[Pricing Calculator](https://azure.microsoft.com/en-us/pricing/calculator/) | [Pricing Calculator](https://cloud.google.com/products/calculator) |
 | **IaC** | CloudFormation | Azure Resource Manager (ARM) | Google Cloud Deployment Manager + Terraform |
