--- a/pages/Misc/Markdown_Cheat_Sheet.mdx
+++ b/pages/Misc/Markdown_Cheat_Sheet.mdx
@@ -7,7 +7,6 @@ This Markdown cheat sheet provides a quick overview of all the Markdown syntax e
 These are the elements outlined in John Gruber’s original design document. All Markdown applications support these elements.
 
 ### Heading  
-```### Heading```
 
 # H1
 ```# H1```
@@ -71,10 +70,15 @@ These are the elements outlined in John Gruber’s original design document. All
 [Markdown Guide](https://www.markdownguide.org)  
 ```[Markdown Guide](https://www.markdownguide.org)```
 
-### Image
+### Image - Hosted Online
 
 ![alt text](https://www.markdownguide.org/assets/images/tux.png)
 ```![alt text](https://www.markdownguide.org/assets/images/tux.png)```
+
+### Image - Hosted Locally
+
+![alt text](../../assets/images/cs2_logo.jpg)
+```![alt text](../../assets/images/cs2_logo.jpg)```
 
 ## Extended Syntax
 
